add redux logic

--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -49,3 +49,19 @@
     cursor: pointer;
   }
 }
+
+.enter {
+  opacity: 0;
+}
+.enterActive {
+  opacity: 1;
+
+  transition: all 500ms linear;
+}
+.exit {
+  opacity: 1;
+}
+.exitActive {
+  opacity: 0;
+  transition: all 500ms linear;
+}
