--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,9 +6,10 @@
 
 .contacts_container {
   border: 1px solid rgb(182, 182, 182);
-  width: 520px;
+  width: 550px;
   padding: 10px;
   box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.2);
+  border-radius: 5px;
 }
 .contact_title {
   font-size: 28px;
