--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -3,8 +3,9 @@
   border: 1px solid rgb(182, 182, 182);
   padding: 10px;
   margin: 15px 0;
-  width: 520px;
+  width: 550px;
   box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.2);
+  border-radius: 5px;
 }
 .label {
   display: block;
@@ -18,7 +19,7 @@
   outline: 0;
   font-size: 14px;
   padding: 5px;
-  width: 250px;
+  width: 300px;
   margin-top: 5px;
   display: block;
   border: 1px solid rgb(182, 182, 182);
@@ -32,7 +33,7 @@
   border-radius: 7px;
   border: 0;
 
-  padding: 2px 10px;
+  padding: 5px 20px;
 
   font-size: 16px;
   line-height: 1.6;
